fix alignemtn

--- a/IPython/frontend/html/notebook/static/less/notebook.less
+++ b/IPython/frontend/html/notebook/static/less/notebook.less
@@ -205,7 +205,7 @@ div.input {
 /* input_area and input_prompt must match in top border and margin for alignment */
 div.input_area {
     /*color: @fontBaseColor;*/
-    border: 1px solid @border_color;
+    border: 1px solid @light_border_color;
     .corner-all;
     background: @cell_background;
 }
@@ -457,3 +457,8 @@ a {
   text-decoration: underline;
 }
 
+p {
+
+margin-bottom:0;
+
+}
